# smashing_the_stack

./: CMakeLists.txt  LICENSE  README.md  build_shellcode.sh  shellcode.nasm
docs/: documentation.md  links.txt
smash/: example1.c  example2.c  example3.c  execve_example.c  exploit.c  shellcode.c  shellcode_nz.nasm  vulnerable.c
